--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -21,6 +21,12 @@ h1.title.is-1 {
   z-index: -1;
 }
 
+@media screen and (max-width: 768px) {
+  .hero-video {
+    display: block !important;
+  }
+}
+
 .hero-cover {
   height: 100%;
   width: 100%;
